# serenity

Base/res/apps/: TaskbarSettings.af
Userland/Applications/: CMakeLists.txt
Userland/Applications/TaskbarSettings/: CMakeLists.txt  Defaults.h  TaskbarSettingsWidget.cpp  TaskbarSettingsWidget.gml  TaskbarSettingsWidget.h  main.cpp
Userland/Services/Taskbar/: TaskbarButton.h  TaskbarWindow.cpp  TaskbarWindow.h
